--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,3 +77,8 @@ fos_user:
     from_email:
         address: noreply@absolumentpastv.com
         sender_name: AbsolumentPasTV
+
+#Easy admin
+easy_admin:
+    entities:
+      - AppBundle\Entity\User
