--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,4 +3,9 @@ app:
     type:     annotation
 
 fos_user:
-      resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+easy_admin_bundle:
+    resource: "@EasyAdminBundle/Controller/"
+    type:     annotation
+    prefix:   /admin
