--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
 
         "incenteev/composer-parameter-handler": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "javiereguiluz/easyadmin-bundle": "^1.16"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
