Modifications on project

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 
         "incenteev/composer-parameter-handler": "^2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "javiereguiluz/easyadmin-bundle": "^1.16",
-        "discutea/forum-bundle": "^1.0"
+        "javiereguiluz/easyadmin-bundle": "^1.16"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
