--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,8 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        resolve_target_entities:
+            Symfony\Component\Security\Core\User\UserInterface: Namespace\YourUserBundle\Entity\User
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -107,3 +109,4 @@ easy_admin:
       menu:
         - { label: 'Dashboard', default: true}
         - User
+
