changing user class

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,8 +88,10 @@ easy_admin:
         class: AppBundle\Entity\User
         form:
           fields:
-            - username
-            - email
+            - emailUser
+            - usernameUser
+            - plainPasswordUser
+            - passwordUser
             # if administrators are allowed to edit users' passwords and roles, add this:
             - { property: 'plainPassword', type: 'text', type_options: { required: false } }
             - { property: 'roles', type: 'choice', type_options: { multiple: true, choices: { 'ROLE_USER': 'ROLE_USER', 'ROLE_ADMIN': 'ROLE_ADMIN' } } }
