--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,7 @@ easy_admin_bundle:
     resource: "@EasyAdminBundle/Controller/"
     type:     annotation
     prefix:   /admin
+
+user_registration:
+    path:     /register
+    defaults: { _controller: AppBundle:Registration:register }
