--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,10 +19,8 @@ security:
         main:
             pattern: ^/
             form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-                # if you are using Symfony < 2.8, use the following config instead:
-                # csrf_provider: form.csrf_provider
+              login_path: login
+              check_path: login
 
             logout:       true
             anonymous:    true
