--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,7 @@ easy_admin_bundle:
 user_registration:
     path:     /register
     defaults: { _controller: AppBundle:Registration:register }
+
+programmes:
+    type:     rest
+    resource: AppBundle\Controller\ProgrammeController
