--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,7 +95,7 @@ easy_admin:
             - passwordUser
             # if administrators are allowed to edit users' passwords and roles, add this:
             - { property: 'plainPassword', type: 'text', type_options: { required: false } }
-            - { property: 'roles', type: 'choice', type_options: { multiple: true, choices: { 'ROLE_USER': 'ROLE_USER', 'ROLE_ADMIN': 'ROLE_ADMIN' } } }
+            - { property: 'roles', type: 'choice', type_options: { multiple: true, choices: { 'ROLE_USER': 'ROLE_USER', 'ROLE_ADMIN': 'ROLE_ADMIN', 'ROLE_AUTHOR': 'ROLE_AUTHOR' } } }
         edit:
           fields:
             - { property: 'plainPassword', type_options: { required: false} }
