--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "discutea/forum-bundle": "^1.0",
         "friendsofsymfony/rest-bundle": "^2.1",
-        "sonata-project/admin-bundle": "dev-master"
+        "sonata-project/admin-bundle": "^3.1",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
 
     },
     "require-dev": {
@@ -55,7 +56,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "7.0"
         }
     },
     "extra": {
