--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,11 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
+_sonata_admin:
+    resource: "@"
+    type: sonata_admin
+    prefix: /admin
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
