--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "discutea/forum-bundle": "^1.0",
-        "friendsofsymfony/rest-bundle": "^2.1"
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "sonata-project/admin-bundle": "^3.1",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
 
 
     },
