--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,7 +87,8 @@ fos_rest:
         view_response_listener: true
     format_listener:
             rules:
-                - { path: '^/', priorities: ['json'], fallback_format: 'json' }
+
+                - { path: '^/', priorities: ['html'], fallback_format: 'html' }
 
 #Easy admin
 easy_admin:
