Corecting small bugs

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,4 +34,4 @@ security:
 #
 #    access_control:
 #      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#      - { path: ^/, roles: ROLE_ADMIN }
+#      - { path: ^/admin, roles: ROLE_ADMIN }
