--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,6 +5,8 @@ security:
     encoders:
             FOS\UserBundle\Model\UserInterface: bcrypt
             AppBundle\Entity\User: bcrypt
+            Symfony\Component\Security\Core\User\User:
+              algorithm: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -12,26 +14,33 @@ security:
         ROLE_MODERATOR:   ROLE_MODERATOR
 
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
+      in_memory:
+        memory:
+          users:
+            admin:
+              password: admin
+              roles: 'ROLE_ADMIN'
 
-    firewalls:
-        dev:
-          pattern: ^/(_(profiler|wdt)|css|images|js)/
-          security: false
+      fos_userbundle:
+          id: fos_user.user_provider.username
 
-        default:
-          anonymous: ~
 #    firewalls:
-#        main:
-#            pattern: ^/
-#            form_login:
-#              login_path: login
-#              check_path: login
+#        dev:
+#          pattern: ^/(_(profiler|wdt)|css|images|js)/
+#          security: false
 #
-#            logout:       true
-#            anonymous:    true
-#
-#    access_control:
-#      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#      - { path: ^/admin, roles: ROLE_ADMIN }
+#        default:
+#          anonymous: ~
+    firewalls:
+        main:
+            pattern: ^/
+            form_login:
+              login_path: login
+              check_path: login
+
+            logout:       true
+            anonymous:    true
+
+    access_control:
+      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: ^/admin, roles: ROLE_ADMIN }
