--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,10 +93,50 @@ fos_rest:
 easy_admin:
     site_name: '<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Cartoon_Network_2010_logo.svg/2000px-Cartoon_Network_2010_logo.svg.png" />'
     entities:
-      - AppBundle\Entity\Actuality
-      - AppBundle\Entity\Programme
-      - AppBundle\Entity\User
+      User:
+        class: AppBundle\Entity\User
+        form:
+          fields:
+            - username
+            - email
+            - enabled
+            - lastLogin
+            # if administrators are allowed to edit users' passwords and roles, add this:
+            - { property: 'plainPassword', type: 'text', type_options: { required: false } }
+            - { property: 'roles', type: 'choice', type_options: { multiple: true, choices: { 'ROLE_USER': 'ROLE_USER', 'ROLE_ADMIN': 'ROLE_ADMIN' } } }
+        edit:
+          fields:
+            - { property: 'plainPassword', type_options: { required: false} }
+          form_options: { validation_groups: ['Profile'] }
+
+        new:
+          fields:
+            - { property: 'plainPassword', type_options: { required: true} }
+          form_options: { validation_groups: ['Registration'] }
+
+      Actuality:
+        class: AppBundle\Entity\Actuality
+        form:
+          fields:
+           - titleNews
+           - subtitleNews
+           - imageNews
+           - contentNews
+           - authorNews #TODO: Changing the fields that they can automatically be set
+           - dateNews #TODO: Changing the fields that they can automatically be set
+
+           - rankNews
+
+      Programme:
+        class: AppBundle\Entity\Programme
+        form:
+          fields:
+            - titleProgram
+            - numberSeason
+            - dateProgram
+            - imageProgram #TODO: Search for type of column to update an image
+            - descriptionProgram
+
     design:
       brand_color: '#30D997'
       color_scheme: 'light'
-
