--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
               algorithm: plaintext
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_USER:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
         ROLE_MODERATOR:   ROLE_MODERATOR
 
