--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -144,6 +144,7 @@ easy_admin:
             - name
             - serie
             - rank
+            - image
 
     design:
       brand_color: '#30D997'
