--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "discutea/forum-bundle": "^1.0",
-        "friendsofsymfony/rest-bundle": "^2.1"
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "nelmio/api-doc-bundle": "^2.13",
+        "jms/serializer-bundle": "^1.2"
 
     },
     "require-dev": {
