--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,7 +89,7 @@ fos_rest:
         view_response_listener: true
     format_listener:
             rules:
-
+                - { path: '^/api', priorities: ['json'], fallback_format: json, prefer_extension: false }
                 - { path: '^/', priorities: ['html'], fallback_format: 'html' }
 
 nelmio_api_doc:
